// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should add different ratio when provided 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,8 +3,8 @@
    data-wp-c16t="true"
    data-wp-component="AspectRatio"
  >
    <img
      alt="Snow"
-     class="css-vl0irh-content css-3ecvn7-className"
+     class="css-vl0irh-content css-1jydpxs-className"
    />
  </div>
`;

exports[`props should add different width when provided 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <div
-   class="components-aspect-ratio css-eji9eb-AspectRatioView-classes e8w5upx0"
+   class="components-aspect-ratio css-y2g68t-AspectRatioView-classes e8w5upx0"
    data-wp-c16t="true"
    data-wp-component="AspectRatio"
  >
    <img
      alt="Snow"
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  max-width: 100%;
  position: relative;
  width: 100%;
}

.emotion-2 {
  width: 100%;
}

.emotion-3 {
  aspect-ratio: auto;
}

<div
  class="components-aspect-ratio emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="AspectRatio"
>
  <img
    alt="Snow"
    class="emotion-2 emotion-3"
  />
</div>
`;
